fix css on mobile

--- a/s23-dogs/src/App.css
+++ b/s23-dogs/src/App.css
@@ -1,8 +1,9 @@
 .App {
-  height: 100vh;
+  min-height: 100vh;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background: linear-gradient(to right, #c9d6ff, #e2e2e2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-size: cover;
 }
